--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,62 +1,60 @@
+@import "colors.css";
+
+
+@font-face {
+    font-family: 'Tisa Sans Pro Regular';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Tisa Sans Pro Regular'), url('Tisa.woff') format('woff');
+}
+
+@font-face {
+    font-family: 'Goudy Old Style', sans-serif;
+    src: url('https://fonts.cdnfonts.com/css/goudy-old-style');
+} 
+
+html,
 body {
-    font-family: Arial, sans-serif;
-    background-color: #1a1a1a;
-    color: #fff;
-    margin: 0;
+    height: 100%;
+    width: 100%;
     padding: 0;
+    margin: 0;
+}
+
+body {
+    font-family: 'Tisa Sans Pro Regular';
+    font-weight: normal;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--background-color);
 }
 
 header {
-    background-color: #111;
-    padding: 20px;
-    text-align: center;
+    font-family: 'Goudy Old Style', sans-serif;
+    font-style: italic, bold;
 }
 
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    text-align: center;
+main {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    overflow-y: hidden;
 }
 
-nav ul li {
-    display: inline;
-    margin-right: 20px;
+#filter {
+    flex-grow: 1;
+    overflow: auto;
 }
 
-nav ul li a {
-    color: #fff;
-    text-decoration: none;
+.content {
+    flex: auto;
+    width: max-content;
+    overflow-y: scroll;
+    border-radius: 16px;
+    padding: 16px 0px 16px 16px;
+    margin: 10px;
+    box-shadow: 5px 4px 8px 0px #00000069;
+    background-color: white;
 }
 
-.hero {
-    background-image: url('space.jpg'); /* Immagine di sfondo */
-    background-size: cover;
-    text-align: center;
-    padding: 100px 0;
-}
 
-.hero h2 {
-    font-size: 36px;
-    margin-bottom: 20px;
-}
-
-.hero p {
-    font-size: 18px;
-    margin-bottom: 40px;
-}
-
-.btn {
-    background-color: #ffcc00;
-    color: #1a1a1a;
-    padding: 10px 20px;
-    text-decoration: none;
-    border-radius: 5px;
-}
-
-footer {
-    background-color: #111;
-    color: #fff;
-    text-align: center;
-    padding: 20px;
-}
